2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>

	Fix problems in porting to NSK reported by Matthew Woehlke in
	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00025.html> and
	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00027.html>.
	* gzip.h: Include <limits.h>, for SSIZE_MAX.
	(INBUFSIZE): Don't make it any larger than SSIZE_MAX.
	Problem reported by Matthew Woehlke in
	<http://lists.gnu.org/archive/html/bug-gzip/2006-11/msg00013.html>.
	* gzip.c: Don't include <limits.h>, as gzip.h now does this.
	* util.c: Likewise.
	* gzip.c (main): Set exiting_signal before installing signal handlers.
	(install_signal_handlers): Don't set exiting_signal here.  This
	fixes a C99ism.
	* zip.c: Include timespec.h, for time_stamp type.

2006-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* gzexe.in: Work around FreeBSD shell trap bug.
	* gzip.1: Fix typo.
	* doc/gzip.texi: Likewise.

2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>

	* .cvsignore: Add .deps, gzexe, gzip, zdiff, zforce, zgrep,
	zless, zmore, znew.
	* doc/.cvsignore: Add Makefile.
	* lib/.cvsignore: Add .deps, Makefile, alloca.h, config.h, fcntl.h,
	stamp-h1, stdint.h, sys.

	* configure.ac (for assembler): Set ASFLAGS_config to
	-Wa,--noexecstack if this seems advisable on this platform.
	Problem reported by Mike Frysinger in
	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00018.html>.
	* lib/Makefile.am (match.$(OBJEXT)): Use ASFLAGS_config.

2006-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.am (install-exec-hook): Fix bug when installing
	symbolic links as aliases.  Problem reported by Mike Frysinger.

	* deflate.c (deflate_fast, deflate): Avoid core dump.  Problem
	originally reported by Jochen Friedrich and trivial patch supplied
	by Anthony Towns; see <http://bugs.debian.org/184057>.

2006-12-06  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS, configure.ac (AC_INIT):
	Version 1.3.7 released.

2006-12-06  Bruno Haible  <bruno@clisp.org>  (tiny change)