@@ -1,4 +1,3 @@
-:
 #!/bin/sh
 
 # zgrep -- a wrapper around a grep program that decompresses files as needed
