@@ -1,4 +1,3 @@
-:
 #!/bin/sh
 
 # Copyright (C) 2001, 2002 Free Software Foundation
