@@ -1,4 +1,3 @@
-:
 #!/bin/sh
 
 # Copyright (C) 1998, 2002, 2004 Free Software Foundation
