@@ -1,5 +1,13 @@
 2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* zdiff.in: Remove first line containing ":".  This follows
+	up on the SEDCMD fix of 2006-12-01.
+	* zforce.in: Likewise.
+	* zgrep.in: Likewise.
+	* zless.in: Likewise.
+	* zmore.in: Likewise.
+	* znew.in: Likewise.
+
 	Fix problems in porting to NSK reported by Matthew Woehlke in
 	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00025.html> and
 	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00027.html>.
